src/snapshots/cornercase__ui__tests__settings__renders_the_sections_and_rows.snap
---
source: src/ui.rs
expression: render(&with(settings(1))).backend()
---
" ▄▀▀▀ cornercase                                         │                                          "
" █┌ settings ────────────────────────────────────────────────────────────────────────────────────┐  "
"  │  Worktrees   Agents   Issues   TUI                                                           │  "
"  │                                                                                              │  "
"  │ Accounts                                                                                     │  "
" p│   Shortcut API token        @ana in acme  saved                                              │  "
"  │ › Linear API key            not connected  enter pastes one                                  │  "
"▌ │                                                                                              │  "
"  │ Sources shown                                                                                │  "
"  │   [x] All                   every source together                                            │  "
"  │   [x] GitHub                                                                                 │  "
"  │   [ ] Linear                                                                                 │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │ enter changes the selected setting                                                           │  "
" ─│                                                                                        done  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  quit                         │                         │                                          "
